2009-10-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#141614 Unnecessary rotations on image viewer if phone application
		  open in switcher

	* matchbox/core/mb-wm-client-window.c (mb_wm_activate_client_real):
	  Do stack animation actors even if they are not focused.
	  It is let up to the community to find out why it wasn't
	  a problem earlier or why it wasn't noticable.

2009-10-01  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.71

2009-09-30  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-client-window.c
	  (mb_wm_client_window_sync_properties):
	  Don't leak COOKIE_WIN_NET_STATE, COOKIE_WIN_TYPE,
	  COOKIE_WIN_HILDON_TYPE, COOKIE_WIN_GEOM either.

2009-09-28  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.70

	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties): Make sure we don't call XFree
	with a NULL argument.

2009-09-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Speed up building.

	* debian/rules:
	  autoreconf only if ./configure doesn't exist, not every time
	  debian/rules runs.

2009-09-18  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties): Avoid leaking memory when
	reading window names. Avoid leaking memory in xas.c
	when we use goto to bail out.

	Release 0.2.69

2009-09-17  Gordon Williams <gordon.williams@collabora.co.uk>

	Changes for Screen rotate speed, related to latest h-d commits and
	bug NB#139504.
	
	* matchbox/core/mb-window-manager.h: Add 
	  MBWindowManagerFlagLayoutRotated
	* matchbox/core/mb-wm-layout.c: When MBWindowManagerFlagLayoutRotated
	  is set, lay things out as if the screen were rotated.

2009-09-16  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.68

	Remove _NET_WM_ICON support since we don't use it and it has buggy
	code. Fixes: NB#138792

	* matchbox/core/mb-wm-client-window.c (icon_from_net_wm_icon):
	Removed.